simple web scrapper

--- a/scrapping_auto_am.ipynb
+++ b/scrapping_auto_am.ipynb
@@ -9,16 +9,7 @@
    "source": [
     "from selenium import webdriver\n",
     "from bs4 import BeautifulSoup\n",
-    "import pandas as pd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "554b0d4b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "import pandas as pd\n",
     "import re"
    ]
   },
@@ -29,6 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# set driver: here Chrome\n",
     "PATH = \"chromedriver.exe\"\n",
     "driver = webdriver.Chrome(PATH)"
    ]
@@ -40,6 +32,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# link for scrapping\n",
     "driver.get(\"https://auto.am/search/passenger-cars?q={%22category%22:%221%22,%22page%22:%221%22,%22sort%22:%22latest%22,%22layout%22:%22list%22,%22user%22:{%22dealer%22:%220%22,%22id%22:%22%22},%22make%22:[%22386%22],%22year%22:{%22gt%22:%221911%22,%22lt%22:%222022%22},%22usdprice%22:{%22gt%22:%220%22,%22lt%22:%22100000000%22},%22mileage%22:{%22gt%22:%2210%22,%22lt%22:%221000000%22}}\")"
    ]
   },
@@ -55,6 +48,7 @@
     "content = driver.page_source\n",
     "soup = BeautifulSoup(content)\n",
     "for a in soup.findAll('a'):\n",
+    "    # a.find() helps to find the needed information for scrapping\n",
     "    car = a.find('span', attrs={'class':'card-title bold'})\n",
     "    price = a.find('div', attrs={'class':'ad-mob-price bold grey-text'})\n",
     "    if price is not None:\n",
